--- a/index.html
+++ b/index.html
@@ -34,12 +34,18 @@
                     <li><a href="tel:+110001111111" class="address-item">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
+
+        </div>
+        <div class="heder-icon-menu">
+            <svg class="heder-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-heroicons-solid-menu"></use>
+            </svg>
         </div>
     </header>
     <main>
         <section class="section-one section">
             <div class="container ">
-                <h1 class="main-title">Effective Solutions for Your Business</h1>
+                <h1 class="main-title">Effective Solutions<br class="br-sol"> for Your Business</h1>
                 <button type="button" class="main-button">Order Service</button>
             </div>
         </section>
@@ -105,7 +111,8 @@
                 <h2 class="team">Our Team</h2>
                 <ul class="team-cont">
                     <li class="team-list">
-                        <img src="./images/img1.jpg" alt="photo" width="264" height="260" />
+                        <img class="dev-img" srcset="./images/img1.jpg 1x, ./images/img1-2x.jpg 2x"
+                            src="./images/img1.jpg" alt="photo" width="264" height="260" />
                         <div class="tm-pp-cont">
                             <h3 class="team-people">Mark Guerrero</h3>
                             <p class="team-people-txt">Product Designer</p>
@@ -130,7 +137,8 @@
                         </div>
                     </li>
                     <li class="team-list">
-                        <img src="./images/img2.jpg" alt="photo" width="264" height="260" />
+                        <img class="dev-img" srcset="./images/img2.jpg 1x, ./images/img2-2x.jpg 2x"
+                            src="./images/img2.jpg" alt="photo" width="264" height="260" />
                         <div class="tm-pp-cont">
                             <h3 class="team-people">Tom Ford</h3>
                             <p class="team-people-txt">Frontend Developer</p>
@@ -155,7 +163,8 @@
                         </div>
                     </li>
                     <li class="team-list">
-                        <img src="./images/img3.jpg" alt="photo" width="264" height="260" />
+                        <img class="dev-img" srcset="./images/img3.jpg 1x, ./images/img3-2x.jpg 2x"
+                            src="./images/img3.jpg" alt="photo" width="264" height="260" />
                         <div class="tm-pp-cont">
                             <h3 class="team-people">Camila Garcia</h3>
                             <p class="team-people-txt">Marketing</p>
@@ -180,7 +189,8 @@
                         </div>
                     </li>
                     <li class="team-list">
-                        <img src="./images/img4.jpg" alt="photo" width="264" height="260" />
+                        <img class="dev-img" srcset="./images/img4.jpg 1x, ./images/img4-2x.jpg 2x"
+                            src="./images/img4.jpg" alt="photo" width="264" height="260" />
                         <div class="tm-pp-cont">
                             <h3 class="team-people">Daniel Wilson</h3>
                             <p class="team-people-txt">UI Designer</p>
@@ -213,7 +223,17 @@
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-cont">
                     <li class="boarder-img">
-                        <div class="cont-overlay"><img src="./images/img5.jpg" alt="photo" width="360" />
+                        <div class="cont-overlay">
+                            <picture>
+                                <source srcset="./images/img5.jpg 1x, ./images/img5-desktop-2x.jpg 2x"
+                                    media="(min-width: 1158px)">
+                                <source srcset="./images/img5-tab-1x.jpg 1x, ./images/img5-tab-2x.jpg 2x"
+                                    media="(min-width: 768px)">
+                                <source srcset="./images/img5-mobile-1x.jpg 1x, ./images/img5-mobile-2x.jpg 2x"
+                                    media="(max-width: 767px)">
+                                <img src="./images/img5.jpg" alt="photo" width="360" />
+                            </picture>
+
                             <p class="txt-overlay ">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App</p>
@@ -224,7 +244,16 @@
                         </div>
                     </li>
                     <li class="boarder-img">
-                        <div class="cont-overlay "><img src="./images/img6.jpg" alt="photo" width="360" height="300" />
+                        <div class="cont-overlay ">
+                            <picture>
+                                <source srcset="./images/img6.jpg 1x, ./images/img6-desktop-2x.jpg 2x"
+                                    media="(min-width: 1158px)">
+                                <source srcset="./images/img6-tab-1x.jpg 1x, ./images/img6-tab-2x.jpg 2x"
+                                    media="(min-width: 768px)">
+                                <source srcset="./images/img6-mobile-1x.jpg 1x, ./images/img6-mobile-2x.jpg 2x"
+                                    media="(max-width: 767px)">
+                                <img src="./images/img6.jpg" alt="photo" width="360" height="" />
+                            </picture>
 
                             <p class="txt-overlay ">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
@@ -237,8 +266,17 @@
                         </div>
                     </li>
                     <li class="boarder-img">
-                        <div class="cont-overlay"><img src="./images/img7.jpg" alt="photo" width="360" />
+                        <div class="cont-overlay">
 
+                            <picture>
+                                <source srcset="./images/img7.jpg 1x, ./images/img7-desktop-2x.jpg 2x"
+                                    media="(min-width: 1158px)">
+                                <source srcset="./images/img7-tab-1x.jpg 1x, ./images/img7-tab-2x.jpg 2x"
+                                    media="(min-width: 768px)">
+                                <source srcset="./images/img7-mobile-1x.jpg 1x, ./images/img7-mobile-2x.jpg 2x"
+                                    media="(max-width: 767px)">
+                                <img src="./images/img7.jpg" alt="photo" width="360" />
+                            </picture>
                             <p class="txt-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager
                                 App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App</p>
@@ -250,7 +288,16 @@
                         </div>
                     </li>
                     <li class="boarder-img">
-                        <div class="cont-overlay"><img src="./images/img8.jpg" alt="photo" width="360" />
+                        <div class="cont-overlay">
+                            <picture>
+                                <source srcset="./images/img8.jpg 1x, ./images/img8-desktop-2x.jpg 2x"
+                                    media="(min-width: 1158px)">
+                                <source srcset="./images/img8-tab-1x.jpg 1x, ./images/img8-tab-2x.jpg 2x"
+                                    media="(min-width: 768px)">
+                                <source srcset="./images/img8-mobile-1x.jpg 1x, ./images/img8-mobile-2x.jpg 2x"
+                                    media="(max-width: 767px)">
+                                <img src="./images/img8.jpg" alt="photo" width="360" />
+                            </picture>
 
                             <p class="txt-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager
                                 App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
@@ -263,7 +310,16 @@
                         </div>
                     </li>
                     <li class="boarder-img">
-                        <div class="cont-overlay"><img src="./images/img9.jpg" alt="photo" width="360" />
+                        <div class="cont-overlay">
+                            <picture>
+                                <source srcset="./images/img9.jpg 1x, ./images/img9-desktop-2x.jpg 2x"
+                                    media="(min-width: 1158px)">
+                                <source srcset="./images/img9-tab-1x.jpg 1x, ./images/img9-tab-2x.jpg 2x"
+                                    media="(min-width: 768px)">
+                                <source srcset="./images/img9-mobile-1x.jpg 1x, ./images/img9-mobile-2x.jpg 2x"
+                                    media="(max-width: 767px)">
+                                <img src="./images/img9.jpg" alt="photo" width="360" />
+                            </picture>
 
                             <p class="txt-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager
                                 App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
@@ -276,18 +332,26 @@
                         </div>
                     </li>
                     <li class="boarder-img">
-                        <div class="cont-overlay"><img src="./images/img10.jpg" alt="photo" width="360" />
+                        <div class="cont-overlay">
+                            <div class="cont-overlay">
+                                <picture>
+                                    <source srcset="./images/img10.jpg 1x, ./images/img10-desktop-2x.jpg 2x"
+                                        media="(min-width: 1158px)">
+                                    <source srcset="./images/img10-tab-1x.jpg 1x, ./images/img10-tab-2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source srcset="./images/img10-mobile-1x.jpg 1x, ./images/img10-mobile-2x.jpg 2x"
+                                        media="(max-width: 767px)">
+                                    <img src="./images/img10.jpg" alt="photo" width="360" />
+                                </picture>
+                                <p class="txt-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
 
-
-                            <p class="txt-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                                Cloud Storage App</p>
-
-                        </div>
-                        <div class="prod-cont">
-                            <h3 class="portfolio-products">Online Courses</h3>
-                            <p class="portfolio-products-txt">Marketing</p>
-                        </div>
+                            </div>
+                            <div class="prod-cont">
+                                <h3 class="portfolio-products">Online Courses</h3>
+                                <p class="portfolio-products-txt">Marketing</p>
+                            </div>
                     </li>
                 </ul>
             </div>
@@ -295,10 +359,11 @@
     </main>
 
     <footer class="footer">
-        <div class=" container cont-footer ">
+        <div class=" container cont-footer">
             <div class="cont-foot-log ">
                 <a href="./index.html" class="footer-logo">Web<span class="footer-logo-studio">Studio</span></a>
-                <p class="footer-txt">Increase the flow of customers and sales for your business with digital marketing
+                <p class="footer-txt">Increase the flow of customers and sales for your business with digital
+                    marketing
                     &
                     growth
                     solutions.
@@ -345,7 +410,8 @@
             </div>
         </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop visually-hidden">
+        visually-hidden
         <div class="modal">
             <button type="button" class="btn-modal">
                 <svg class="btn-icon" width="8" height="8">
@@ -397,16 +463,70 @@
                                 <use href="./images/icons.svg#icon-Vector"></use>
                             </svg>
                         </span>
-                        I accept the terms and conditions of the
-                        <a class="checkbox-txt-link" href="">Privacy Policy</a>
+                        <span>I accept the terms and conditions of the
+                            <a class="checkbox-txt-link" href="">Privacy Policy</a></span>
                     </label>
                 </div>
                 <button class="checkbox-button">Send</button>
             </form>
         </div>
     </div>
+    <!-----------------!!!!!!!!!!!!!! мобілка!!!!!!!!!!!!!!!!!----------------- -->
+    <div class="mobile-menu is_open">
+        <div class="mobile_menu is-open">
+            <button type="button" class="btn-modal">
+                <svg class="mob_icon_close" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close-black-18d"></use>
+                </svg>
+            </button>
+            <nav class="hed-mob-menu">
+                <ul>
+                    <li class="heder-menu-li">
+                        <a class="mobile_menu_link active-mob-li" href="./index.html">Studio</a>
+                    </li>
+                    <li class="heder-menu-li">
+                        <a class="mobile_menu_link" href="">Portfolio</a>
+                    </li>
+                    <li class="heder-menu-li">
+                        <a class="mobile_menu_link" href="">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class=" address-mob">
+                <ul class="add-mob-ul">
+                    <li class="add-mob-li">
+                        <a class=" add-li-item active-mob-li" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                    <li class="add-mob-li">
+                        <a class="add-li-item" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                </ul>
+            </address>
+            <ul class="mob-icon-cont">
+                <li class=" soc-link-item"><a class="foot-soc-link" href="">
+                        <svg class="foot-icons" width="24" height="24">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg></a>
+                </li>
+                <li class="soc-link-item"><a class="foot-soc-link" href="">
+                        <svg class="foot-icons" width="24" height="24">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg></a>
+                </li>
+                <li class="soc-link-item"><a class="foot-soc-link" href="">
+                        <svg class="foot-icons" width="24" height="24">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg></a>
+                </li>
+                <li class="soc-link-item"><a class="foot-soc-link" href="">
+                        <svg class="foot-icons" width="24" height="24">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg></a>
+                </li>
+            </ul>
 
-
+        </div>
+    </div>
 </body>
 
 
