--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </section>
 
         <section class="section-three section">
-            <div class="container">
+            <div class="container cont-tab-pep">
                 <h2 class="team">Our Team</h2>
                 <ul class="team-cont">
                     <li class="team-list">
@@ -472,26 +472,29 @@
         </div>
     </div>
     <!-----------------!!!!!!!!!!!!!! мобілка!!!!!!!!!!!!!!!!!----------------- -->
-    <div class="mobile-menu is_open">
-        <div class="mobile_menu is-open">
-            <button type="button" class="btn-modal">
-                <svg class="mob_icon_close" width="8" height="8">
-                    <use href="./images/icons.svg#icon-close-black-18d"></use>
-                </svg>
-            </button>
-            <nav class="hed-mob-menu">
-                <ul>
-                    <li class="heder-menu-li">
-                        <a class="mobile_menu_link active-mob-li" href="./index.html">Studio</a>
-                    </li>
-                    <li class="heder-menu-li">
-                        <a class="mobile_menu_link" href="">Portfolio</a>
-                    </li>
-                    <li class="heder-menu-li">
-                        <a class="mobile_menu_link" href="">Contacts</a>
-                    </li>
-                </ul>
-            </nav>
+
+    <div class="mobile-menu is-open">
+        <button type="button" class="btn-modal">
+            <svg class="mob_icon_close" width="8" height="8">
+                <use href="./images/icons.svg#icon-close-black-18d"></use>
+            </svg>
+        </button>
+
+        <nav class="hed-mob-menu">
+            <ul>
+                <li class="heder-menu-li">
+                    <a class="mobile_menu_link active-mob-li" href="./index.html">Studio</a>
+                </li>
+                <li class="heder-menu-li">
+                    <a class="mobile_menu_link" href="">Portfolio</a>
+                </li>
+                <li class="heder-menu-li">
+                    <a class="mobile_menu_link" href="">Contacts</a>
+                </li>
+            </ul>
+        </nav>
+
+        <div>
             <address class=" address-mob">
                 <ul class="add-mob-ul">
                     <li class="add-mob-li">
@@ -524,9 +527,9 @@
                         </svg></a>
                 </li>
             </ul>
-
         </div>
     </div>
+
 </body>
 
 
